--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-shorten-url": "^1.0.5",
