--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "anchorme": "^2.1.2",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
