--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 REACT_APP_ME=plasmedis-web-local
-REACT_APP_PLASMEDIS_API=https://plasmedis-api-dev.herokuapp.com/
+REACT_APP_PLASMEDIS_API=http://localhost:5000
