--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "codelab-test1",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.17.0"
+  },
   "dependencies": {
     "@chakra-ui/avatar": "^1.2.5",
     "@chakra-ui/button": "^1.3.2",
