--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Print
-        run: echo ${{ secrets.VPS_SSH_KEY }}
+        run: echo "${{ secrets.VPS_SSH_KEY }}"
 
       - name: Checkout code
         uses: actions/checkout@v2
