--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Print
-        run: echo "${{ deploy }}"
+        run: echo "deploy"
 
       - name: Checkout code
         uses: actions/checkout@v2
