--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: Install SSH Client
+        uses: webfactory/ssh-agent@v0.2.0
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
