--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Make sure the @v0.9.0 matches the current version of the action
+      - name: Ssh setup
       - uses: webfactory/ssh-agent@v0.9.0
         with:
             ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
