--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/checkout@v4
 
       # Make sure the @v0.9.0 matches the current version of the action
-      - name: Ssh setup
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+      -   name: Setup key
+          uses: ./
+          with:
+              ssh-private-key: |
+                  ${{ secrets.MPDUDE_TEST_1_DEPLOY_KEY }}
+                  ${{ secrets.MPDUDE_TEST_2_DEPLOY_KEY }}
 
       - name: connect and pull
         run: ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd /repo/codelab-loader/plasmedis-web && git pull && exit"
