--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -21,8 +21,7 @@ jobs:
           uses: ./
           with:
               ssh-private-key: |
-                  ${{ secrets.MPDUDE_TEST_1_DEPLOY_KEY }}
-                  ${{ secrets.MPDUDE_TEST_2_DEPLOY_KEY }}
+                  ${{ secrets.VPS_SSH_KEY }}
 
       - name: connect and pull
         run: ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd /repo/codelab-loader/plasmedis-web && git pull && exit"
