--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/checkout@v4
 
       # Make sure the @v0.9.0 matches the current version of the action
-      -   name: Setup key
-          uses: ./
-          with:
-              ssh-private-key: |
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+            ssh-private-key: |
                   ${{ secrets.VPS_SSH_KEY }}
 
       - name: connect and pull
