--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -32,6 +32,8 @@ jobs:
           SSH_HOST: ${{ secrets.VPS_HOST }}
 
       - name: connect and pull
-        run: ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd /repo/codelab-loader/plasmedis-web && git pull && exit"
+        run: | 
+          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 
+          cd /repo/codelab-loader/plasmedis-web && git pull && exit
       - name: cleanup
         run: rm -rf ~/.ssh
