--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -11,35 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print
-        run: echo "deploy"
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Deploy to Staging server
+      - uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build task
+        run: npm run build --if-present
+      - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-rlgoDzvc -i"
-          SOURCE: "repo"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}
-          SCRIPT_BEFORE: |
-            whoami
-            ls -al
-          SCRIPT_AFTER: |
-            whoami
-            ls -al
-            git pull
-            echo $RSYNC_STDOUT
-
-      - name: connect and pull
-        run: | 
-          echo ${{ secrets.REMOTE_USER }}
-          echo ${{ secrets.REMOTE_HOST }}
-          ssh -t -t ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}
-          
-      - name: cleanup
-        run: rm -rf ~/.ssh
+            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            ARGS: "-rlgoDzvc -i --delete"
+            SOURCE: "dist/"
+            REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+            REMOTE_USER: ${{ secrets.REMOTE_USER }}
+            TARGET: ${{ secrets.REMOTE_TARGET }}
+            EXCLUDE: "/dist/, /node_modules/"
