--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@1 
+        uses: actions/checkout@v4 
     
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
