--- a/.github/workflows/1-deploy-develop.yml
+++ b/.github/workflows/1-deploy-develop.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Stop container
         run: |
           cd ..
-          docker-compose stop plasmedis-web
+          docker compose stop plasmedis-web
 
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
@@ -32,4 +32,4 @@ jobs:
       - name: Run container
         run: |
           cd ..
-          docker-compose up plasmedis-web
+          docker compose up plasmedis-web
